fix "home page always has a scrollbar"

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -19,7 +19,6 @@ body.body {
     margin: 0px;
     color: #261818;
     background: url('../images/bg-green.png') fixed bottom center repeat-x $leaf;
-    height: 100%;
     width: 100%;
 }
 
